# easya2a

./: .gitignore  CLAUDE.md  MCP_AGENT_DESIGN.md  MCP_INTEGRATION_RESEARCH_REPORT.md  README.md  agent_executor.py  main.py  pyproject.toml  test_client.py  test_mcp_integration.py  test_multi_agents.py  test_sse_config.py
agents/base/: __init__.py  base_executor.py
agents/echo/: __init__.py
agents/llm/: __init__.py  llm_agent.py  tool_calling_agent.py  tool_calling_executor.py
agents/mcp/: __init__.py  mcp_agent.py  mcp_executor.py
config/: README.md  agents.example.yaml  tool_calling_test.yaml
core/: config.py  llm_manager.py  mcp_manager.py  tool_executor.py
docs/: MCP_AGENT_GUIDE.md  MCP_AGENT_RESEARCH.md
examples/: example_tools.py
